# Colour

./: .gitignore  8a972f51-272c-43c5-b73f-30eebac119cc  ARCHITECTURE.md  AUDIT_LOG.md  CHANGELOG.md  CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  package.json
.github/workflows/: publish.yml
colour-shield/: README.md  package.json
colour-shield/registry/: registry.json
colour-shield/scripts/: keygen.js  stamp-top-100.js
colour-shield/src/: audit.js  cli.js  index.js  interceptor.js  licence.js  verifier.js
colour-shield/tests/: audit.test.js  interceptor.test.js  run.js  verifier.test.js
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/chains/: mod.rs
core/src/encryption/: mod.rs
core/src/keygen/: mod.rs
core/src/memory/: mod.rs
core/src/provenance/: mod.rs
core/src/qrng/: mod.rs
core/src/recovery/: mod.rs
core/src/replay/: mod.rs
core/src/rotation/: mod.rs
core/src/signing/: mod.rs
core/src/verify/: main.rs
github/workflows/: ci.yml
mcp/: package.json
mcp/src/: .server.ts  server.ts
scripts/: deploy-institution.sh  deploy-sovereign.sh
