[package]
name = "colour-vault-core"
version = "0.1.0"
edition = "2021"
authors = ["Colour Foundation <buildwithcolours@gmail.com>"]
description = "Post-quantum resistant cryptographic vault core"
license = "Apache-2.0"

[lib]
name = "colour_vault_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
getrandom = { version = "0.2", features = ["std"] }
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
subtle = "2.5"

[dev-dependencies]
proptest = "1.4"

[features]
default = ["std"]
std = []
enclave = []
qrng-api = []
dev-mode = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
